--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="col s12 m6">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg">
+          <img src="image/sample-1.jpg">
 
           <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
         </div>
